Committing after a long time. God knows what breaks

--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,12 @@
   background-repeat: repeat-y;
   min-height: 100vh;
 }
+
+.section-header {
+  font-size: 3rem;
+  position: absolute;
+  top: 0;
+  text-align: center;
+  width: 100%;
+  background-color: red;
+}
