--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -7,7 +7,7 @@
     white-space: nowrap;
 }
 
-.button-body {
+.button-body-primary {
     width: fit-content;
     display: flex;
     flex-direction: column;
@@ -17,6 +17,22 @@
     background: #000000;
     border-radius: 8px;
     color: #ffffff;
+    position: relative;
+    z-index: 2;
+    user-select: none;
+}
+
+.button-body-secondary {
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 14px;
+    border: 2px #000000 solid;
+    background: #ffffff;
+    border-radius: 8px;
+    color: #000000;
     position: relative;
     z-index: 2;
     user-select: none;
